@@ -131,6 +131,8 @@ In alphabetical order (by last name)
 ** Patch [#12701] Allow checking of content captured with content_for in view specs
 * Michal Kwiatkowski
 ** Patch to get RSpec to work w/ Heckle +/- 1.2
+* Jarkko Laine
+** LH[#132] Plain Text stories should support Given and Given: 
 * Matthijs Langenberg
 ** Patch [#12682] Not correctly aliasing original 'stub!' and 'should_receive' methods for ApplicationController
 ** Patch [#12719] rspec_on_rails should not include pagination helper
